dsl/parser/snapshots/dsl_parser__tests__single_statement_with_value.snap
---
source: dsl/parser/lib.rs
description: "input: test(test_single, \"SELECT\", [Null, 1])"
expression: res
---
Test {
    kind: Default,
    mode: Normal,
    ident: "test_single",
    statement: Single(
        "\"SELECT\"",
    ),
    values: [
        [
            Null,
            Integer(
                1,
            ),
        ],
    ],
}
