dsl/parser/snapshots/dsl_parser__tests__with_kind-3.snap
---
source: dsl/parser/lib.rs
description: "input: test(memory,test_single, \"SELECT\", [Null, 1])"
expression: res
---
Test {
    kind: Memory,
    mode: Normal,
    ident: "test_single",
    statement: Single(
        "SELECT",
    ),
    values: [
        [
            Null,
            Integer(
                1,
            ),
        ],
    ],
}
